test_output_pnpm.txt

> fitpilot-nutrition-backend@0.0.1 test:e2e C:\Users\Leero\OneDrive\Escritorio\dev_projects\fitpilot\fitpilot-nutrition-backend
> env-cmd -f .env.test jest --config ./test/jest-e2e.json "--" "test/biometric-logs.e2e-spec.ts" "--no-cache" "--runInBand"

FAIL test/biometric-logs.e2e-spec.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\Leero\OneDrive\Escritorio\dev_projects\fitpilot\fitpilot-nutrition-backend\generated\prisma\client.ts:52
    globalThis['__dirname'] = path.dirname((0, node_url_1.fileURLToPath)(import.meta.url));
                                                                                ^^^^

    SyntaxError: Cannot use 'import.meta' outside a module

      1 | import { Injectable, OnModuleInit } from '@nestjs/common';
      2 | import { PrismaPg } from '@prisma/adapter-pg';
    > 3 | import { PrismaClient } from '../../generated/prisma/client';
        | ^
      4 |
      5 | @Injectable()
      6 | export class PrismaService extends PrismaClient implements OnModuleInit {

      at Runtime.createScriptFromCode (../node_modules/.pnpm/jest-runtime@29.7.0/node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (../src/prisma/prisma.service.ts:3:1)
      at Object.<anonymous> (../src/prisma/prisma.module.ts:2:1)
      at Object.<anonymous> (../src/app.module.ts:4:1)
      at Object.<anonymous> (biometric-logs.e2e-spec.ts:4:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.32 s
Ran all test suites matching /test\\biometric-logs.e2e-spec.ts|--no-cache|--runInBand/i.
ELIFECYCLE Command failed with exit code 1.
